--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion '26.0.2'
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.app.barcodeclient3"
@@ -27,6 +28,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    configurations { //for compile 'com.opencsv:opencsv:4.0'
+        all*.exclude group: 'commons-logging', module: 'commons-logging'
+    }
 }
 
 repositories {
@@ -43,8 +48,22 @@ repositories {
 dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile files('libs/poi-3.7.jar')
-    compile files('libs/jaybird-full-2.2.1.jar')
+
+
+    //compile files('libs/poi-3.7.jar')
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+
+    compile group: 'org.apache.poi', name: 'poi', version: '3.7'
+
+   // compile files('libs/jaybird-full-2.2.1.jar')
+
+
+    // https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird-full
+  //  compile group: 'org.firebirdsql.jdbc', name: 'jaybird-full', version: '2.2.1'
+
+
+
+
     compile 'com.journeyapps:zxing-android-embedded:3.3.0'
     compile('com.mikepenz.materialdrawer:library:0.9.5@aar') {
         transitive = true
@@ -52,7 +71,10 @@ dependencies {
     compile('com.android.support:cardview-v7:23.2.0') {
         force = true
     }
-    compile 'com.opencsv:opencsv:3.8'
+   // compile 'com.opencsv:opencsv:3.8'
+    compile 'com.opencsv:opencsv:4.0'
+
+
     //compile 'com.android.support:appcompat-v7:23.1.0'   // Version 23+ is required
     // Supports Android 4.0.3 and later (API level 15)
     // compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
@@ -67,4 +89,5 @@ dependencies {
     // This mostly affects encoding, but you should test if you plan to support these versions.
     // Older versions e.g. 2.2 may also work if you need support for older Android versions.
     // compile 'com.google.zxing:core:3.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
