--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,12 +53,35 @@
 
         </activity>
 
+
+
+        <activity
+            android:name="newmainscanner.ScannerOfflineActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen2"
+            android:windowSoftInputMode="adjustNothing" >
+
+
+        </activity>
+
+
+
         <activity
             android:name="newmainscanner.NewScannerActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:theme="@style/Theme.AppCompat.Light"
             android:label="@string/app_name"
             >
+
+
+        </activity>
+
+        <activity android:name="excel.ExportTableActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/app_name">
+
+
 
 
         </activity>
@@ -162,5 +185,7 @@
 
 
     </application>
+
+
 
 </manifest>
