--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.app.barcodeclient3"
         minSdkVersion 16
-        targetSdkVersion 19
-        versionCode 12
-        versionName "3.13"
+        compileSdkVersion 26
+        // targetSdkVersion 19
+        versionCode 13
+        versionName "3.14"
+        multiDexEnabled true
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_7
             targetCompatibility JavaVersion.VERSION_1_7
         }
+        vectorDrawables.useSupportLibrary = true
     }
 
-    buildTypes {
+    /*buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -27,7 +30,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
+    }*/
 
     configurations { //for compile 'com.opencsv:opencsv:4.0'
         all*.exclude group: 'commons-logging', module: 'commons-logging'
@@ -41,39 +44,46 @@ repositories {
 
 }
 
+allprojects {
+    repositories {
+        jcenter()
+        flatDir {
+            dirs 'libs'
+        }
+        google()
+    }
+}
+
 
 
 
 
 dependencies {
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:appcompat-v7:22.2.1'
-
+    implementation 'com.android.support:support-v4:26.0.2'
+    implementation 'com.android.support:support-vector-drawable:26.0.2'
+    compile 'com.android.support:design:26.0.2'
+    compile 'com.android.support:appcompat-v7:26.0.2'
 
     //compile files('libs/poi-3.7.jar')
     // https://mvnrepository.com/artifact/org.apache.poi/poi
 
     compile group: 'org.apache.poi', name: 'poi', version: '3.7'
 
-   // compile files('libs/jaybird-full-2.2.1.jar')
-
+    // compile files('libs/jaybird-full-2.2.1.jar')
 
     // https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird-full
-  //  compile group: 'org.firebirdsql.jdbc', name: 'jaybird-full', version: '2.2.1'
-
-
+    //  compile group: 'org.firebirdsql.jdbc', name: 'jaybird-full', version: '2.2.1'
 
 
     compile 'com.journeyapps:zxing-android-embedded:3.3.0'
     compile('com.mikepenz.materialdrawer:library:0.9.5@aar') {
         transitive = true
     }
-    compile('com.android.support:cardview-v7:23.2.0') {
+    compile('com.android.support:cardview-v7:26.0.2') {
         force = true
     }
-   // compile 'com.opencsv:opencsv:3.8'
+    // compile 'com.opencsv:opencsv:3.8'
     compile 'com.opencsv:opencsv:4.0'
-
 
     //compile 'com.android.support:appcompat-v7:23.1.0'   // Version 23+ is required
     // Supports Android 4.0.3 and later (API level 15)
@@ -90,4 +100,15 @@ dependencies {
     // Older versions e.g. 2.2 may also work if you need support for older Android versions.
     // compile 'com.google.zxing:core:3.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //Jaybird_2_2_12
+    compile(name: 'Jaybird_2_2_12', ext: 'aar')
+
+    compile group: 'commons-dbutils', name: 'commons-dbutils', version: '1.5'
+
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
 }
