--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,191 +1,136 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.barcodeclient3"
-    android:versionCode="2"
-    android:versionName="2.0" >
+>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-feature android:name="android.hardware.camera" />
 
-
-
     <application
-        android:allowBackup="true"
         android:name="main.MainApplication"
+        android:allowBackup="true"
         android:icon="@drawable/icon_2"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
-
+        android:theme="@style/AppTheme">
         <activity
             android:name="main.MainActivityOld"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustNothing" >
-        </activity>
-
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name="start.WellcomeActivity2"
-
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            >
-
-
-
-        </activity>
-
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="startactivity.MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustNothing" >
-
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name="com.app.barcodeclient3.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/MainActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
+        <activity android:name="com.app.barcodeclient3.SettingsActivity"
+            android:theme="@style/MainActivityTheme">
 
+        </activity>
 
         <activity
             android:name="newmainscanner.ScannerOfflineActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen2"
-            android:windowSoftInputMode="adjustNothing" >
+            android:windowSoftInputMode="adjustNothing">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
-
-
         <activity
             android:name="newmainscanner.NewScannerActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:theme="@style/Theme.AppCompat.Light"
             android:label="@string/app_name"
-            >
+            android:theme="@style/Theme.AppCompat.Light">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
-        <activity android:name="excel.ExportTableActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/app_name">
-
-
-
-
-        </activity>
-
-
+        <activity
+            android:name="excel.ExportTableActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
         <activity
             android:name="main.TreeGrpAndGoodsActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:windowSoftInputMode="adjustPan"
-            android:label="@string/app_name" >
-        </activity>
-         <activity
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name="main.FragmentActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name="main.SettingsActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="docklist.DockListActivity"
-
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
-
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="docklist.DockDetailsActivity"
-
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
-
-
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="scanworkingactivity.ScanWorkingActivity"
-
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
-
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="scanworkingactivity.ScanSettingsActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:theme="@style/Theme.AppCompat.Light"
             android:label="@string/app_name"
-             >
-        </activity>
-
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name="devicesList.DevicesListActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="@string/app_name"
-            >
-        </activity>
-
+            android:label="@string/app_name" />
         <activity
             android:name="main.OfflineModeActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="@string/app_name"
-            >
-        </activity>
-
+            android:label="@string/app_name" />
         <activity
             android:name="startactivity.AboutAppActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="@string/app_name"
-            >
-        </activity>
-
+            android:label="@string/app_name" />
         <activity
             android:name="start.WellcomeActivity"
-            android:theme="@style/Theme.AppCompat"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            >
-
-        </activity>
-
-
-
-
-
-
-
-        <activity android:name="excel.AndroidReadExcelActivity"
-            android:label="@string/app_name">
-
-        </activity>
-
-
-        <activity android:name="scanworkingactivity.TotalGoodsListActivity"
-            android:label="@string/app_name">
-
-        </activity>
-
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name="excel.AndroidReadExcelActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name="scanworkingactivity.TotalGoodsListActivity"
+            android:label="@string/app_name" />
 
     </application>
-
-
 
 </manifest>
