Init Rollbar import xls fonts colors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         // targetSdkVersion 19
         versionCode 13
         versionName "3.14"
-        multiDexEnabled true
+     //   multiDexEnabled true
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_7
             targetCompatibility JavaVersion.VERSION_1_7
@@ -64,6 +64,8 @@ dependencies {
     compile 'com.android.support:design:26.0.2'
     compile 'com.android.support:appcompat-v7:26.0.2'
 
+    compile 'com.android.support:multidex:1.0.0'
+
     //compile files('libs/poi-3.7.jar')
     // https://mvnrepository.com/artifact/org.apache.poi/poi
 
@@ -110,5 +112,7 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile 'com.rollbar:rollbar-android:0.2.1'
 
 }
